--- a/app/views/note_mailer/note_email.text.erb
+++ b/app/views/note_mailer/note_email.text.erb
@@ -1,5 +1,6 @@
+ 
 ===========================================
-  「<%= @title %> 」の掲載が完了しました。
+  サービスぺージの掲載が完了しました。
 ===========================================
 
 Seekleをご利用いただき、誠にありがとうございます。
@@ -14,7 +15,7 @@ Seekleをご利用いただき、誠にありがとうございます。
 ２. 当日の予定、料金を明確にしましょう！
  - 当日、変更のないようにしましょう。
 
-３. いつでもご気軽にご相談ください！
+３. いつでもお気軽にご相談ください！
  - 何か困ったことがあればSeekleのお問い合わせメールにご連絡ください。
 
 
