--- a/app/views/note_mailer/note_email.html.erb.html
+++ b/app/views/note_mailer/note_email.html.erb.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-   <% @note.note_revisions.each do |note_revision| %>
-
-    <h1>「<%= note_revision.title %> 」の掲載が完了しました。</h1>
+    <h1>サービスぺージの掲載が完了しました。</h1>
    <p>Seekleをご利用いただき、誠にありがとうございます。</p>
 <p>サービスぺージの作成が完了し、掲載が完了しました。</p>
 
@@ -19,7 +17,7 @@
 <p>２. 当日の予定、料金を明確にしましょう！</p>
  <p>- 当日、変更のないようにしましょう。</p>
 
-<p>３. いつでもご気軽にご相談ください！</p>
+<p>３. いつでもお気軽にご相談ください！</p>
  <p>- 何か困ったことがあればSeekleのお問い合わせメールにご連絡ください。</p>
  
 
@@ -33,4 +31,4 @@
 <br>────────────────────────────────
   </body>
 </html>
-<% end %>
+
