--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -40,7 +40,7 @@
      </tr>
      <tr>
        <th>エリア：</th>
-       <td><%=s.prefecture %>></td>
+       <td><%=s.prefecture %></td>
      </tr>
      <tr>
        <th>カテゴリー：</th>
