--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -65,7 +65,7 @@
 <option value="36">- エクササイズ</option>
 <option value="37">- ヒーリング</option>
 <option value="38">- コーチング</option>
-<option value="39">- スパ</option>
+<option value="39">- マッサージ・エステ</option>
 <option value="40">- パーソナルシェフ</option>
 <option value="41">- その他</option>
  </optgroup>
