--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -36,7 +36,7 @@
      <tbody>
       <tr>
        <th>提供者：</th>
-       <td><%= link_to @note.provider.name, profile_note_path %></td>
+       <td><%= link_to @note.provider.name, profile_note_path ,:class => "link_provider" %></td>
      </tr>
      <tr>
        <th>エリア：</th>
