--- a/app/views/providers/registrations/new.html.erb
+++ b/app/views/providers/registrations/new.html.erb
@@ -7,7 +7,16 @@
 <h2>Seekleに無料でサービスを掲載する</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+
+   <% if @provider.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+      <% @provider.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
 <div class="field2">
     <h3>店舗名</h3>
@@ -45,6 +54,7 @@
   </div>
 
 
+  
 
  <%= f.fields_for :store_infos do |s| %>
 
