--- a/app/views/category/_header.html.erb
+++ b/app/views/category/_header.html.erb
@@ -3,11 +3,12 @@
  <div class="upper-menu">
     <div class="wrapper" >
     <ul>
-       <li><a href="/category/housing">住まい</a></li>
-    <li><a href="/category/event">イベント</a></li>
-    <li><a href="/category/lesson">習い事</a></li>
-      <li><a href="/category/health">健康</a></li>
-   <li><a href="/category/others">その他</a></li>
+     <li><a href="/category/housing?category=住まい">住まい</a></li>
+    <li><a href="/category/event/?category=イベント">イベント</a></li>
+    <li><a href="/category/lesson/?category=習い事">習い事</a></li>
+    <li><a href="/category/health/?category=健康">健康</a></li>
+    <li><a href="/category/others/?category=その他">その他</a></li>
+  </div>
     </ul>
     </div>
   </div>
@@ -15,5 +16,4 @@
 
 
   
-
 
