--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -36,31 +36,34 @@
 
 
 <select class="chosen-select form-control" name="note[category_id]" id="note_category_id" >
-<option value="">選択してください</option>
+ <option value="">選択してください</option>
 <optgroup label="住まい">
 <option value="6">- ハウスクリーニング</option>
-<option value="7">- フローリング</option>
-<option value="8">- お引越し</option>
-<option value="9">- リフォーム</option>
-<option value="10">- 不用品回収</option>
-<option value="11">- 配管工事</option>
-<option value="12">- 家具</option>
+<option value="7">- お引越し</option>
+<option value="8">- リフォーム</option>
+<option value="9">-  不用品回収</option>
+<option value="10">- 配管工事</option>
+<option value="11">- 剪定・造園</option>
+<option value="12">- 家具修理</option>
 <option value="13">- 家電取り付け</option>
-<option value="14">- 剪定・造園</option>
-<option value="15">- 害虫駆除</option>
-<option value="16">- その他</option>
+<option value="14">- 害虫駆除</option>
+<option value="15">- 家事代行・家政婦</option>
+<option value="16">- ペットシッター</option>
+<option value="17">- その他</option>
 </optgroup>
 <optgroup label="イベント">
-<option value="17">- ケータリング</option>
-<option value="18">- 結婚式</option>
-<option value="19">- 写真撮影</option>
-<option value="20">- 動画制作</option>
-<option value="21">- 音楽</option>
-<option value="22">- パーティーレンタル</option>
-<option value="23">- ドライバー</option>
+<option value="18">- ケータリング</option>
+<option value="19">- 結婚式</option>
+<option value="20">- 写真撮影</option>
+<option value="21">- 動画撮影</option>
+<option value="22">- フラワーデザイナー</option>
+<option value="23">- 音楽演奏</option>
 <option value="24">- エンターテイメント</option>
-<option value="25">- パーティー準備</option>
-<option value="26">- その他</option>
+<option value="25">- プランニング</option>
+<option value="26">- ドライバー</option>
+<option value="27">- メイク・ヘアメイク</option>
+<option value="28">- ネイル</option>
+<option value="29">- その他</option>
 </optgroup>
 <optgroup label="習い事">
 <option value="27">- 音楽</option>
